footer sticking to bottom, but must fix accordion falling behind footer

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -14,20 +14,24 @@ html {
   box-sizing: border-box;
   font-size: 100%;
   font-family: sans-serif;
+  height: 100%;
   min-height: 100%;
-  position: relative;
+  vertical-align: baseline;
 }
 
 *, *::before, *::after {;
   box-sizing: inherit;
 }
 body {
-  margin: 0;
-  padding: 0;
   background: white;
+  color: #000;
   font-family: sans-serif;
   font-weight: normal;
-  color: #000;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
 
 article,
