--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -3,7 +3,7 @@ footer {
   clear: both;
   color: white;
   padding: 1rem 0.5rem 3rem;
-  position: relative;
+  position: absolute;
   bottom: 0;
   display: inline-block;
   width: 100%;
