--- a/sass/components/off-canvas.scss
+++ b/sass/components/off-canvas.scss
@@ -4,6 +4,8 @@ $sidebar-color: $gray-dark;
 .page-wrapper {
   float: left;
   transition: width 0.3s ease;
+  height: 100%;
+  min-height: 100%;
   width: 100%;
 }
 #off-canvas {
